--- a/test1.html
+++ b/test1.html
@@ -4,6 +4,7 @@
     <title>Test Page</title>  
     </head>
     <body>
-        Hello, World!
+        <h1>Hello, World!</h1>
+        <p>How are you </p>
     </body>
 </html
