--- a/test1.html
+++ b/test1.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <title>Test Page, Locally Changed</title> 
+        <title>Test Page, Locally Changed</title> 
+        <style>
+            .page_header { color:#F00; }
+        </style>
     </head>
     <body>
-        <h1 width="50" class="page_header">Hello, World!!</h1>
+        <h1 width="50" class="">Hello, World!!</h1>
         <p>How are you</p>
     </body>
 </html>
