Move Style FIxe

--- a/test1.html
+++ b/test1.html
@@ -3,11 +3,11 @@
     <head>
         <title>Test Page, Locally Changed</title> 
         <style>
-            .page_header { color:#F00; }
+            .h1 { color:#F00; }
         </style>
     </head>
     <body>
-        <h1 width="50" class="">Hello, World!!</h1>
+        <h1 width="50">Hello, World!!</h1>
         <p>How are you</p>
     </body>
 </html>
